--- a/Serenity.CodeGenerator.config
+++ b/Serenity.CodeGenerator.config
@@ -54,6 +54,20 @@
                     "Module": "Common",
                     "ConnectionKey": "Default",
                     "PermissionKey": "Administration:General"
+                },
+                {
+                    "Tablename": "dbo.SalesInvoiceMaster",
+                    "Identifier": "SalesInvoiceMaster",
+                    "Module": "Sales",
+                    "ConnectionKey": "Default",
+                    "PermissionKey": "Administration:General"
+                },
+                {
+                    "Tablename": "dbo.SalesInvoiceDetail",
+                    "Identifier": "SalesInvoiceDetail",
+                    "Module": "Sales",
+                    "ConnectionKey": "Default",
+                    "PermissionKey": "Administration:General"
                 }
             ]
         },
@@ -67,8 +81,24 @@
     "KDiff3Path": "C:\\Program Files (x86)\\KDiff3\\kdiff3.exe",
     "TFSIntegration": false,
     "WebProjectFile": "..\\..\\..\\MGExportModule\\MGExportModule.Web\\MGExportModule.Web.csproj",
-    "BaseRowClasses": [],
-    "RemoveForeignFields": [],
+    "BaseRowClasses": [
+        {
+            "ClassName": "NRow",
+            "Fields": [
+                "InsertDate",
+                "InsertUserId",
+                "UpdateDate",
+                "UpdateUserId"
+            ]
+        }
+    ],
+    "RemoveForeignFields": [
+        "InsertDate",
+        "InsertUserId",
+        "UpdateDate",
+        "UpdateUserId"
+    ],
+    "CustomTemplates": "E:\\Practice Serenity TVL\\MGExportModule\\MGExportModule\\MGExportModule.Web\\Modules\\_Ext\\CodeGeneratorTemplates",
     "CustomGenerate": {},
     "CustomSettings": {},
     "GenerateRow": true,
