--- a/Serenity.CodeGenerator.config
+++ b/Serenity.CodeGenerator.config
@@ -68,6 +68,13 @@
                     "Module": "Sales",
                     "ConnectionKey": "Default",
                     "PermissionKey": "Administration:General"
+                },
+                {
+                    "Tablename": "dbo.CmnUserType",
+                    "Identifier": "UserType",
+                    "Module": "Common",
+                    "ConnectionKey": "Default",
+                    "PermissionKey": "Administration:General"
                 }
             ]
         },
